Replace TEMPORAL_ENDPOINT with TEMPORAL_ADDRESS

--- a/openai-agents-demos/.env-sample
+++ b/openai-agents-demos/.env-sample
@@ -1,5 +1,5 @@
 TEMPORAL_API_KEY=''
 TEMPORAL_NAMESPACE=''
-TEMPORAL_ENDPOINT=''
+TEMPORAL_ADDRESS=''
 TEMPORAL_TASK_QUEUE='research-queue'
 OPENAI_API_KEY=''
