--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "markdown>=3.4.0",
     "dotenv>=0.9.9",
     "streamlit>=1.51.0",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.urls]
