--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "markdown>=3.4.0",
     "dotenv>=0.9.9",
     "streamlit>=1.51.0",
+    "fastapi>=0.122.0",
+    "uvicorn>=0.37.0",
 ]
 
 [project.urls]
